--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     },
     "dependencies": {
         "@hello-pangea/dnd": "^18.0.1",
+        "@heroicons/react": "^2.2.0",
         "lucide-react": "^0.544.0",
+        "moment": "^2.30.1",
+        "react-big-calendar": "^1.19.4",
+        "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "sortablejs": "^1.15.6"
     }
