--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@hello-pangea/dnd": "^18.0.1",
         "@heroicons/react": "^2.2.0",
+        "date-fns": "^4.1.0",
         "lucide-react": "^0.544.0",
         "moment": "^2.30.1",
         "react-big-calendar": "^1.19.4",
