--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "dependencies": {
         "@hello-pangea/dnd": "^18.0.1",
         "@heroicons/react": "^2.2.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.544.0",
         "moment": "^2.30.1",
         "react-big-calendar": "^1.19.4",
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
-        "sortablejs": "^1.15.6"
+        "sortablejs": "^1.15.6",
+        "tailwind-merge": "^3.5.0"
     }
 }
